macros/tests/compile_fail/name_not_string.stderr
error: [melbi] name must be an identifier
 --> tests/compile_fail/name_not_string.rs:5:19
  |
5 | #[melbi_fn(name = 123)]
  |                   ^^^
